--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ JSON/
 node_modules/
 .replit
 replit.nix
+result.json
 
 # git remote add origin https://github.com/DeprecatedTable/automaze-bot.git
 # git branch -M main
