--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sort-es": "^1.6.12"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "node": "^16.20.1"
   },
   "description": ""
