--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/node": "^18.0.6",
     "better-sqlite3": "^8.4.0",
